# teale-node

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.cpu  README.md  build.rs  teale-node.android.toml  teale-node.example.toml  teale-node.litert.toml  teale-node.mesh.toml  teale-node.windows.toml
.cargo/: config.toml
docs/: fleet-deployment-windows.md  mesh-backend.md  protocol.md
installer/: BUILD-INSTALLER.txt  check-update.ps1  post-install.ps1  teale-node-setup.iss  uninstall.ps1
scripts/: build-all.sh  build-android.sh  build-litert.sh  build-mesh-llm-android.sh  deploy-windows.ps1
src/: backend.rs  cluster.rs  config.rs  hardware.rs  identity.rs  inference.rs  litert.rs  main.rs  relay.rs
